--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,21 @@
 @import "compass_twitter_bootstrap";
 @import "compass_twitter_bootstrap_responsive";
 
-.nav li a, 
-.blog-title {
+p, h1, h2, h3, h4, h5, a {
   color: black;
   font-family: Courier New, Courier;
+}
+
+a:hover {
+  color: gray
+}
+
+img.user-icon {
+  width: 50px;
+}
+
+.nav li a, 
+.blog-title {
   padding-top: 0;
   padding-bottom: 0;
   font-variant: small-caps;
@@ -12,14 +23,6 @@
 }
 
 .nav .active li a {
-  color: gray;
-}
-
-.blog-title a {
-  color: black;
-}
-
-.blog-title a:hover {
   color: gray;
 }
 
