--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,12 @@
 @import "compass_twitter_bootstrap";
 @import "compass_twitter_bootstrap_responsive";
 
+p > strong {
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
 p, h1, h2, h3, h4, h5, a {
   color: black;
   font-family: Courier New, Courier;
