--- a/app/views/navigation.html
+++ b/app/views/navigation.html
@@ -3,3 +3,4 @@
     <a href="#/{{p.link}}">{{p.title | lowercase}}</a>
   </li>
 </ul>
+<img id="viewmaster" ng-class="{rotating: rotating, rotated: rotated}" src="images/viewmaster.png"/>
