--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 </div>
-<div class="photo-column">
+<div class="photo-column" ui-scrollfix>
   <img class="featured" ng-src="{{featured.url}}" alt="{{featured.caption}}">
   <img class="instagram" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
 </div>
