--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,7 +1,7 @@
 <ul id="links">
   <li ng-repeat="p in pages">
-    <a href="#/{{p.link}}">{{p.title | lowercase}}</a>
+    <a href="{{p.link}}">{{p.title | lowercase}}</a>
   </li>
 </ul>
-<embed id="logo" src="images/logo.svg" type="image/svg+xml" />
-<img id="banner" src="images/media/phil-experiment_750x118.jpg">
+<embed id="logo" src="/images/logo.svg" type="image/svg+xml" />
+<img id="banner" src="/images/media/phil-experiment_750x118.jpg">
