--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,7 +1,21 @@
 <ul id="links">
-  <li ng-repeat="p in pages">
-    <a href="{{p.link}}">{{p.title | lowercase}}</a>
+  <li>
+    <a href="/project">project</a>
+  </li>
+  <li>
+    <a href="/visual">visual</a>
+  </li>
+  <li>
+    <a href="/stockists">stockists</a>
+  </li>
+  <li>
+    <a href="/about">about</a>
+  </li>
+  <li>
+    <a href="/contact">contact</a>
   </li>
 </ul>
 <embed id="logo" src="/images/logo.svg" type="image/svg+xml" />
-<img id="banner" src="/images/media/phil-experiment_750x118.jpg">
+<a href="/project?media">
+  <img id="banner" src="/images/media/phil-experiment_750x118.jpg">
+</a>
