--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,7 +12,7 @@
     <a href="/about">about</a>
   </li>
   <li>
-    <a href="/contact">contact</a>
+    <a href="mailto: info@castequality.com">contact</a>
   </li>
 </ul>
 <embed id="logo" src="/images/logo.svg" type="image/svg+xml" />
