--- a/app/views/stockists.html
+++ b/app/views/stockists.html
@@ -1,3 +1,8 @@
-<div ng-repeat="stockist in stockists" class="stockist">
-  {{stockist}}
+<div class="stockists">
+  <div ng-repeat="card in cards" class="stockist" ng-style="card.style">
+    <h4>{{card.name}}</h4>
+    <p>{{card.address.street}}</p>
+    <p>{{card.address.city}}, {{card.address.state}} {{card.address.zip}}</p>
+    <p>{{card.phone}}</p>
+  </div>
 </div>
