visual/stockists/main-photo-feed populated by real data

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,21 +1,21 @@
 <ul id="links">
   <li>
-    <a href="/project">project</a>
+    <a href="#project">project</a>
   </li>
   <li>
-    <a href="/visual">visual</a>
+    <a href="#visual">visual</a>
   </li>
   <li>
-    <a href="/stockists">stockists</a>
+    <a href="#stockists">stockists</a>
   </li>
   <li>
-    <a href="/about">about</a>
+    <a href="#about">about</a>
   </li>
   <li>
     <a href="mailto: info@castequality.com">contact</a>
   </li>
 </ul>
-<embed id="logo" src="/images/logo.svg" type="image/svg+xml" />
-<a href="/project?media">
-  <img id="banner" src="/images/media/phil-experiment_750x118.jpg">
+<embed id="logo" src="images/logo.svg" type="image/svg+xml" />
+<a href="#project?media">
+  <img id="banner" src="images/media/phil-experiment_750x118.jpg">
 </a>
