--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -71,6 +71,21 @@ a {
   font-variant: small-caps;
 }
 
+#visuals {
+  width: 100%;
+  -moz-columns: 217px;
+  -webkit-columns: 217px;
+  -columns: 217px;
+  -moz-column-gap:4px; /* Firefox */
+  -webkit-column-gap:4px; /* Safari and Chrome */
+  column-gap:4px;
+}
+
+#visuals > a > img {
+  width: 217px;
+  margin: 4px auto 0 auto;
+}
+
 .ng-view {
   margin-left: 92px;
   margin-right: 20px;
@@ -86,6 +101,19 @@ a {
 }
 
 .stockists > * {
+  width: 206px;
+  height: 206px;
+  border: solid 1px #CCC;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  background-repeat: no-repeat;
+  background-origin: content-box;
+  background-position: center;
+  background-size: 100%;
+  vertical-align: text-bottom;
+}
+
+.stockists > a > div {
   float: left;
   width: 206px;
   height: 206px;
@@ -162,6 +190,12 @@ a {
   margin-bottom: 4px;
 }
 
+#photo-feed > a > img {
+  width: 118px;
+  margin-bottom: 4px;
+}
+
+
 #photo-feed > :last-child {
   margin-bottom: 0;
 }
@@ -180,6 +214,7 @@ img.project-img {
   width: 888px;
   height: 500px;
   overflow: hide;
+  margin: auto;
 }
 
 ul {
@@ -213,127 +248,4 @@ p, h1, h2, h3, h4, h5, a {
 
 a:hover {
   color: gray
-}
-
-/** Stolen from bootstrap */
-
-.carousel {
-  position: relative;
-  margin-bottom: 20px;
-  line-height: 1;
-}
-
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-}
-
-.carousel-inner > .item {
-  position: relative;
-  display: none;
-  -webkit-transition: 0.6s ease-in-out left;
-     -moz-transition: 0.6s ease-in-out left;
-       -o-transition: 0.6s ease-in-out left;
-          transition: 0.6s ease-in-out left;
-}
-
-.carousel-inner > .item > img {
-  display: block;
-  line-height: 1;
-}
-
-.carousel-inner > .active,
-.carousel-inner > .next,
-.carousel-inner > .prev {
-  display: block;
-}
-
-.carousel-inner > .active {
-  left: 0;
-}
-
-.carousel-inner > .next,
-.carousel-inner > .prev {
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
-.carousel-inner > .next {
-  left: 100%;
-}
-
-.carousel-inner > .prev {
-  left: -100%;
-}
-
-.carousel-inner > .next.left,
-.carousel-inner > .prev.right {
-  left: 0;
-}
-
-.carousel-inner > .active.left {
-  left: -100%;
-}
-
-.carousel-inner > .active.right {
-  left: 100%;
-}
-
-.carousel-control {
-  position: absolute;
-  top: 40%;
-  left: 15px;
-  width: 40px;
-  height: 40px;
-  margin-top: -20px;
-  font-size: 60px;
-  font-weight: 100;
-  line-height: 30px;
-  color: #ffffff;
-  text-align: center;
-  background: #222222;
-  border: 3px solid #ffffff;
-  -webkit-border-radius: 23px;
-     -moz-border-radius: 23px;
-          border-radius: 23px;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-
-.carousel-control.right {
-  right: 15px;
-  left: auto;
-}
-
-.carousel-control:hover {
-  color: #ffffff;
-  text-decoration: none;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-}
-
-.carousel-caption {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 15px;
-  background: #333333;
-  background: rgba(0, 0, 0, 0.75);
-}
-
-.carousel-caption h4,
-.carousel-caption p {
-  line-height: 20px;
-  color: #ffffff;
-}
-
-.carousel-caption h4 {
-  margin: 0 0 5px;
-}
-
-.carousel-caption p {
-  margin-bottom: 0;
 }
