--- a/app/views/stockists.html
+++ b/app/views/stockists.html
@@ -1,8 +1,10 @@
 <div class="stockists">
-  <div ng-repeat="card in cards" class="stockist" ng-style="card.style">
-    <h4>{{card.name}}</h4>
-    <p>{{card.address.street}}</p>
-    <p>{{card.address.city}}, {{card.address.state}} {{card.address.zip}}</p>
-    <p>{{card.phone}}</p>
-  </div>
+  <a ng-repeat="card in cards" href="{{card.url}}">
+    <div class="stockist" ng-style="card.style">
+      <h4>{{card.name}}</h4>
+      <p>{{card.address.street}}</p>
+      <p>{{card.address.city}}, {{card.address.state}} {{card.address.zip}}</p>
+      <p>{{card.phone}}</p>
+    </div>
+  </a>
 </div>
