--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,6 +1,10 @@
-<carousel current-index="index" interval="interval">
+<!-- <carousel current-index="index" interval="interval">
   <slide ng-repeat="page in project.photos" active="page.active">
     <img class="project-img" ng-src="{{page.original_size.url}}">
     <p>{{p.caption}}</p>
   </slide>
-</carousel>
+</carousel> -->
+
+<div id="project">
+  <img class="project-img" ng-repeat="page in project.photos" ng-src="{{page.original_size.url}}">
+</div>
