implemented stockist titles and mouseover

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -157,6 +157,7 @@ a {
 .stockist > h4,
 .stockist > p {
   color: white;
+  background-color: black;
   padding: 0;
   margin: 0;
   float: right;
@@ -164,11 +165,23 @@ a {
 }
 
 .stockist > h4 {
-  font-size: 20px;
+  font-size: 18px;
+  padding: 5px;
+  margin-top: 120px;
 }
 
 .stockist > p {
+  display: none;
+  width: 100%;
+  text-align: right;
   font-size: 13px;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 2px;
+}
+
+.stockist:hover > p {
+  display: block;
 }
 
 .stockist:nth-child(4n) {
