--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
 html {
-  overflow-y: scroll;
+  overflow-y: hidden;
 } 
 
 body {
@@ -14,6 +14,7 @@ ul, li {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 .ui-scrollfix {
@@ -68,8 +69,14 @@ a {
 
 #links > li > a {
   font-weight: bold;
+  color: black;
+  text-decoration: none;
   height: 18px;
   font-variant: small-caps;
+}
+
+#links > li > a:hover {
+  color: gray;
 }
 
 #visuals {
@@ -108,6 +115,11 @@ a {
   display: table;
 }
 
+img.project-img {
+  width: 888px;
+  height: 500px;
+}
+
 .ng-view {
   margin-left: 92px;
   margin-right: 20px;
@@ -123,9 +135,13 @@ a {
 }
 
 .stockists > * {
+  border: solid 1px #CCC;
+}
+
+.stockists > a > div {
+  float: left;
   width: 206px;
   height: 206px;
-  border: solid 1px #CCC;
   margin-right: 20px;
   margin-bottom: 20px;
   background-repeat: no-repeat;
@@ -135,18 +151,8 @@ a {
   vertical-align: text-bottom;
 }
 
-.stockists > a > div {
-  float: left;
-  width: 206px;
-  height: 206px;
-  border: solid 1px #CCC;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  background-repeat: no-repeat;
-  background-origin: content-box;
-  background-position: center;
-  background-size: 100%;
-  vertical-align: text-bottom;
+.stockists > a:nth-child(4n + 0) > div {
+  margin-right: 0;
 }
 
 .stockists:after {
@@ -167,7 +173,7 @@ a {
 .stockist > h4 {
   font-size: 18px;
   padding: 5px;
-  margin-top: 120px;
+  margin-top: 100px;
 }
 
 .stockist > p {
@@ -214,6 +220,15 @@ a {
 
 .post-title {
   margin: 0;
+}
+
+.post-title > a {
+  color: black;
+}
+
+.post-title > a:hover {
+  color: gray;
+  text-decoration: none;
 }
 
 .post-date {
@@ -285,4 +300,127 @@ p, h1, h2, h3, h4, h5, a {
 
 a:hover {
   color: gray
+}
+
+/** RIPPED FROM BOOTSTRAP **/
+
+.carousel {
+  position: relative;
+  margin-bottom: 20px;
+  line-height: 1;
+}
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-inner > .item {
+  position: relative;
+  display: none;
+  -webkit-transition: 0.6s ease-in-out left;
+     -moz-transition: 0.6s ease-in-out left;
+       -o-transition: 0.6s ease-in-out left;
+          transition: 0.6s ease-in-out left;
+}
+
+.carousel-inner > .item > img {
+  display: block;
+  line-height: 1;
+}
+
+.carousel-inner > .active,
+.carousel-inner > .next,
+.carousel-inner > .prev {
+  display: block;
+}
+
+.carousel-inner > .active {
+  left: 0;
+}
+
+.carousel-inner > .next,
+.carousel-inner > .prev {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.carousel-inner > .next {
+  left: 100%;
+}
+
+.carousel-inner > .prev {
+  left: -100%;
+}
+
+.carousel-inner > .next.left,
+.carousel-inner > .prev.right {
+  left: 0;
+}
+
+.carousel-inner > .active.left {
+  left: -100%;
+}
+
+.carousel-inner > .active.right {
+  left: 100%;
+}
+
+.carousel-control {
+  position: absolute;
+  top: 40%;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  font-size: 60px;
+  font-weight: 100;
+  line-height: 30px;
+  color: #ffffff;
+  text-align: center;
+  background: #222222;
+  border: 3px solid #ffffff;
+  -webkit-border-radius: 23px;
+     -moz-border-radius: 23px;
+          border-radius: 23px;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+
+.carousel-control.right {
+  right: 15px;
+  left: auto;
+}
+
+.carousel-control:hover {
+  color: #ffffff;
+  text-decoration: none;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+
+.carousel-caption {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 15px;
+  background: #333333;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.carousel-caption h4,
+.carousel-caption p {
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.carousel-caption h4 {
+  margin: 0 0 5px;
+}
+
+.carousel-caption p {
+  margin-bottom: 0;
 }
