--- a/app/views/header.html
+++ b/app/views/header.html
@@ -15,7 +15,7 @@
     <a href="mailto: info@castequality.com">contact</a>
   </li>
 </ul>
-<embed id="logo" src="images/logo.svg" type="image/svg+xml" />
+<object id="logo" data="images/logo.svg" type="image/svg+xml"></object>
 <a href="#project?media">
   <img id="banner" src="images/media/phil-experiment_750x118.jpg">
 </a>
