--- a/app/views/stockists.html
+++ b/app/views/stockists.html
@@ -1,5 +1,5 @@
 <div class="stockists">
-  <a ng-repeat="card in cards" href="{{card.url}}">
+  <a ng-repeat="(tag, card) in cards" href="{{card.url}}">
     <div class="stockist" ng-style="card.style">
       <h4>{{card.name | uppercase}}</h4>
       <p>{{card.address.street}}</p>
