--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,6 +1,6 @@
-<div carousel current-index="pages.index" interval="pages.interval">
-  <div slide ng-repeat="page in project.photos" active="page.active">
+<carousel current-index="pages.index" interval="pages.interval">
+  <slide ng-repeat="page in project.photos" active="page.active">
     <img class="project-img" ng-src="{{page.original_size.url}}">
     <p>{{p.caption}}</p>
-  </div>
-</div>
+  </slide>
+</carousel>
