initial work with projects/videos

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,2 +1,1 @@
-<h1 class="about">Caste.</h1>
-<p class="about" ng-bind-html-unsafe="about | emphasized:'Caste'"/>
+<p class="about" ng-bind-html-unsafe="about | emphasized:'Caste Quality'"/>
