--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,18 +17,27 @@ a {
   color: black;
 }
 
-h1.about {
+p.about {
   margin: 0;
+  font-size: 14px;
+  color: rgba(0,0,0,0.5);
+  width: 36em;
 }
 
-p.about > span {
-  color: rgba(0,0,0,0.65);
+p.about-title {
+  font-size: 14px;
+  padding: 4px 0;
   font-weight: 600;
 }
 
-p.about {
-  font-size: 20px;
-  color: rgba(0,0,0,0.5);
+p.about > span {
+  color: black;
+  font-weight: 600;
+}
+
+p.about > span:before {
+  content: '\A\A';
+  white-space: pre;
 }
 
 .ui-scrollfix {
@@ -129,6 +138,11 @@ p.about {
   display: table;
 }
 
+.item > p,
+.item > p > p {
+  margin: -1px 0;
+}
+
 img.project-img {
   width: 888px;
   height: 500px;
@@ -223,20 +237,13 @@ img.project-img {
   width: 100%;
 }
 
-.post {
-  
-}
-
 .post > p,
 .post > p > p {
   color: rgba(0,0,0,0.5);
   font-size: 13px;
 }
 
-.post > hr {
-  margin: 0;
-}
-
+.post > hr,
 .post-title {
   margin: 0;
 }
@@ -262,16 +269,11 @@ img.project-img {
   float: left;
 }
 
-#photo-feed > * {
-  width: 118px;
-  margin-bottom: 4px;
-}
-
+#photo-feed > *,
 #photo-feed > a > img {
-  width: 118px;
+  width: 100%;
   margin-bottom: 4px;
 }
-
 
 #photo-feed > :last-child {
   margin-bottom: 0;
@@ -285,6 +287,17 @@ img.project-img {
 .photo-column > * {
   display: block;
   margin-bottom: 20px;
+  position: relative;
+}
+
+#instagram {
+  height: 206px;
+  width: 206px;
+}
+
+#featured {
+  height: 244px;
+  width: 206px;
 }
 
 ul {
@@ -293,16 +306,6 @@ ul {
   -webkit-margin-after: 0;
   -webkit-margin-before: 0;
   -webkit-margin-end: 0;
-}
-
-img.instagram {
-  height: 206px;
-  width: 206px;
-}
-
-img.featured {
-  height: 244px;
-  width: 206px;
 }
 
 p > strong {
@@ -317,7 +320,8 @@ p, h1, h2, h3, h4, h5, a {
 }
 
 a:hover {
-  color: gray
+  opacity: 0.9;
+  filter:Alpha(opacity=90);
 }
 
 /** RIPPED FROM BOOTSTRAP **/
@@ -393,7 +397,7 @@ a:hover {
 //  width: 40px;
   height: 40px;
 //  margin-top: -20px;
-  margin-top: -10px;
+  margin: 0;
   font-size: 60px;
   font-weight: 100;
   line-height: 30px;
