--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,9 +16,9 @@
 </div>
 <div class="photo-column">
   <a ng-href="//castequality.bigcartel.com{{store.featured.url}}">
-    <img class="featured" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
+    <img id="featured" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
   </a>
   <a href="//instagram.com/castequality">
-    <img class="instagram" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
+    <img id="instagram" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
   </a>
 </div>
