--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,6 +1,6 @@
 <carousel current-index="pages.index" interval="pages.interval">
-  <slide ng-repeat="page in project.photos" active="page.active">
-    <img class="project-img" ng-src="{{page.original_size.url}}">
-    <p>{{p.caption}}</p>
+  <slide ng-repeat="page in project.pages" active="page.active">
+    <img ui-if="page.original_size" class="project-img" ng-src="{{page.original_size.url}}">
+    <p ui-if="page.media" ng-bind-html-unsafe="page.media">
   </slide>
 </carousel>
