--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,8 +17,10 @@
 <div class="photo-column" ui-scrollfix="138">
   <a ng-href="//castequality.bigcartel.com{{store.featured.url}}">
     <img id="featured" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
+    <h3>store</h3>
   </a>
   <a href="//instagram.com/castequality">
     <img id="instagram" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
+    <h3>instagram</h3>
   </a>
 </div>
