featured item now links to store

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 <div class="photo-column" ui-scrollfix="138">
-  <a ng-href="//castequality.bigcartel.com{{store.featured.url}}">
+  <a ng-href="//store.castequality.com{{store.featured.url}}">
     <img id="featured" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
     <h3>store</h3>
   </a>
