--- a/app/views/header.html
+++ b/app/views/header.html
@@ -16,6 +16,11 @@
   </li>
 </ul>
 <object id="logo" data="images/logo.svg" type="image/svg+xml"></object>
-<a href="#project?media">
-  <img id="banner" src="images/media/phil-experiment_750x118.jpg">
-</a>
+<div id="banner">
+  <a href="#project?media">
+    <img src="images/media/hover-phil-experiment_750x118.jpg">
+  </a>
+  <a class="rollover"  href="#project?media">
+    <img src="images/media/phil-experiment_750x118.jpg">
+  </a>
+</div>
