--- a/app/views/header.html
+++ b/app/views/header.html
@@ -15,12 +15,13 @@
     <a href="mailto: info@castequality.com">contact</a>
   </li>
 </ul>
-<object id="logo" data="images/logo.svg" type="image/svg+xml"></object>
+<div id="logo" class="rollover">
+  <object data="images/hover-logo.svg" type="image/svg+xml"></object>
+  <object class="hover" data="images/logo.svg" type="image/svg+xml"></object>
+</div>
 <div id="banner">
-  <a href="#project?media">
+  <a class="rollover" href="#project?media">
     <img src="images/media/hover-phil-experiment_750x118.jpg">
-  </a>
-  <a class="rollover"  href="#project?media">
-    <img src="images/media/phil-experiment_750x118.jpg">
+    <img class="hover" src="images/media/phil-experiment_750x118.jpg">
   </a>
 </div>
