--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,12 +16,12 @@
   </div>
 </div>
 <div class="photo-column" ui-scrollfix="138">
-  <a ng-href="//store.castequality.com{{store.featured.url}}">
-    <img id="featured" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
-    <h3>store</h3>
+  <a class="rollover" ng-href="//store.castequality.com{{store.featured.url}}" target="_blank">
+    <object id="featured-hover"data="images/store.svg" type="image/svg+xml"></object>
+    <img id="featured" class="hover" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
   </a>
-  <a href="//instagram.com/castequality">
-    <img id="instagram" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
-    <h3>instagram</h3>
+  <a class="rollover" href="//instagram.com/castequality" target="_blank">
+    <object id="instagram-hover"data="images/insta.svg" type="image/svg+xml"></object>
+    <img id="instagram" class="hover" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
   </a>
 </div>
