rollovers use JPEG instead of SVG

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -80,6 +80,7 @@ p.about > span:before {
 
 #banner > a {
   position: relative;
+  height: 0;
   opacity: 1;
   filter:Alpha(opacity=100);
 }
@@ -105,8 +106,14 @@ p.about > span:before {
   margin: 0;
 }
 
+#logo > a > * {
+  height: 118px;
+  width: 118px;
+}
+
 #links {
   width: 72px;
+  height: 118px;
 }
 
 #links > :first-child {
