--- a/app/views/header.html
+++ b/app/views/header.html
@@ -15,13 +15,15 @@
     <a href="mailto: info@castequality.com">contact</a>
   </li>
 </ul>
-<div id="logo" class="rollover">
-  <object data="images/hover-logo.svg" type="image/svg+xml"></object>
-  <object class="hover" data="images/logo.svg" type="image/svg+xml"></object>
+<div id="logo">
+  <a class="rollover" href="#">
+    <img src="images/media/logo-hover.jpg">
+    <img class="hover" src="images/media/logo.jpg">
+  </a>
 </div>
 <div id="banner">
   <a class="rollover" href="#project?media">
-    <img src="images/media/hover-phil-experiment_750x118.jpg">
-    <img class="hover" src="images/media/phil-experiment_750x118.jpg">
+    <img src="images/media/phil-experiment-hover.jpg">
+    <img class="hover" src="images/media/phil-experiment.jpg">
   </a>
 </div>
