--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,11 +17,11 @@
 </div>
 <div class="photo-column" ui-scrollfix="138">
   <a class="rollover" ng-href="//store.castequality.com{{store.featured.url}}" target="_blank">
-    <object id="featured-hover"data="images/store.svg" type="image/svg+xml"></object>
+    <img id="featured-hover" src="images/media/store.jpg">
     <img id="featured" class="hover" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
   </a>
   <a class="rollover" href="//instagram.com/castequality" target="_blank">
-    <object id="instagram-hover"data="images/insta.svg" type="image/svg+xml"></object>
+    <img id="instagram-hover" src="images/media/insta.jpg">
     <img id="instagram" class="hover" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
   </a>
 </div>
