--- a/app/views/stockists.html
+++ b/app/views/stockists.html
@@ -1,10 +1,1 @@
-<div class="stockists">
-  <a ng-repeat="(tag, card) in cards" href="{{card.url}}">
-    <div class="stockist" ng-style="card.style">
-      <h4>{{card.name | uppercase}}</h4>
-      <p>{{card.address.street}}</p>
-      <p>{{card.address.city}}, {{card.address.state}} {{card.address.zip}} {{card.address.country}}</p>
-      <p>{{card.phone}}</p>
-    </div>
-  </a>
-</div>
+<img src="images/media/stockists.jpg">
