fixed only visuals and photo-feed anchors to lighten on hover

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,10 +40,6 @@ p.about > span:before {
   white-space: pre;
 }
 
-.rollover {
-  position: relative;
-}
-
 .rollover > * {
   position: absolute;
 }
@@ -79,7 +75,7 @@ p.about > span:before {
 }
 
 #banner > a {
-  position: relative;
+  // position: relative;
   height: 0;
   opacity: 1;
   filter:Alpha(opacity=100);
@@ -388,7 +384,8 @@ p, h1, h2, h3, h4, h5, a {
   font-family: Courier New, Courier;
 }
 
-a:hover {
+#visuals > a:hover,
+#photo-feed > a:hover {
   opacity: 0.9;
   filter:Alpha(opacity=90);
 }
