--- a/app/views/stockists.html
+++ b/app/views/stockists.html
@@ -1,1 +1,1 @@
-<img src="images/media/stockists.jpg">
+<iframe src="//mapsengine.google.com/map/view?mid=zwxobRAiulVo.kqr3NuqmRP1g" width="888" height="550"></iframe>
