working on castequality/castequality.github.com#1

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,5 @@
 <p class="about" ng-bind-html-unsafe="about | emphasized:'Caste Quality'"/>
+
+<a href="mailto: info@castequality.com">
+  <h3>contact us</h3>
+</a>
