--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,7 +12,7 @@
     <a href="#about">about</a>
   </li>
   <li>
-    <a href="mailto: info@castequality.com">contact</a>
+    <a href="//store.castequality.com">store</a>
   </li>
 </ul>
 <div id="logo">
