--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 <div class="photo-column" ui-scrollfix="138">
-  <a class="rollover" ng-href="//store.castequality.com{{store.featured.url}}" target="_blank">
+  <a class="rollover" ng-href="//store.castequality.com" target="_blank">
     <img id="featured-hover" src="images/media/store.jpg">
     <img id="featured" class="hover" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
   </a>
