--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -5,8 +5,8 @@
   </slide>
 </carousel>
 <ul class="projects">
-  <li class="project" ng-repeat="(key, project) in projects">
-    <a ng-href="#/project?p={{key}}">{{key * 1000 | date:'MM/yy'}}</a>
+  <li class="project" ng-repeat="project in projects">
+    <a ng-href="#/project?p={{project.timestamp}}">{{$index + 1 | romanize}}</a>
     <span ui-if="!$last">&gt;</span>
   </li>
 </ul>
