--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,9 @@
+@import "media-links";
+@import "carousel";
+@import "blog";
+@import "about";
+@import "stockists";
+
 html {
   overflow-y: scroll;
 } 
@@ -17,125 +23,9 @@ a {
   color: black;
 }
 
-p.about {
-  margin: 0;
-  font-size: 14px;
-  color: rgba(0,0,0,0.5);
-  width: 36em;
-}
-
-p.about-title {
-  font-size: 14px;
-  padding: 4px 0;
-  font-weight: 600;
-}
-
-p.about > span {
-  color: black;
-  font-weight: 600;
-}
-
-p.about > span:before {
-  content: '\A\A';
-  white-space: pre;
-}
-
-.rollover > * {
-  position: absolute;
-}
-
-.hover {
-  opacity: 100;
-  filter:Alpha(opacity=100);
-}
-
-.rollover > .hover:hover {
-  opacity: 0;
-  filter:Alpha(opacity=0);
-}
-
 #content {
   margin: auto;
   width: 1000px;
-}
-
-#header > * {
-  float: left;
-  height: 118px;
-  margin: 20px 20px 20px 0;
-}
-
-#header > :last-child {
-  margin-right: 0;
-}
-
-#header:after {
-  display: table;
-  clear: both;
-}
-
-#banner > a {
-  // position: relative;
-  height: 0;
-  opacity: 1;
-  filter:Alpha(opacity=100);
-}
-
-#banner > a > * {
-  width: 750px;
-  height: 118px;
-  margin-right: 0;
-}
-
-#banner > a > * {
-  position: absolute;
-}
-
-#logo {
-  position: relative;
-  height: 118px;
-  width: 118px;
-}
-
-#logo > * {
-  position: absolute;
-  margin: 0;
-}
-
-#logo > a > * {
-  height: 118px;
-  width: 118px;
-}
-
-#links {
-  width: 72px;
-  height: 118px;
-}
-
-#links > :first-child {
-  margin-top: 14px;
-}
-
-#links > :last-child {
-  margin-bottom: 14px;
-}
-
-#links > li {
-  width: 72px;
-  height: 18px;
-  text-align: right;
-}
-
-#links > li > a {
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-  height: 18px;
-  font-variant: small-caps;
-}
-
-#links > li > a:hover {
-  color: gray;
 }
 
 #visuals {
@@ -206,163 +96,8 @@ img.project-img {
   clear: both;
 }
 
-.stockists {
-  
-}
-
-.stockists > * {
-  border: solid 1px #CCC;
-}
-
-.stockists > a > div {
-  float: left;
-  width: 206px;
-  height: 206px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  background-repeat: no-repeat;
-  background-origin: content-box;
-  background-position: center;
-  background-size: 100%;
-  vertical-align: text-bottom;
-}
-
-.stockists > a:nth-child(4n + 0) > div {
-  margin-right: 0;
-}
-
-.stockists:after {
-  display: table;
-  clear: both;
-}
-
-.stockist > h4,
-.stockist > p {
-  color: white;
-  background-color: black;
-  padding: 0;
-  margin: 0;
-  float: right;
-  font-weight: 600;
-}
-
-.stockist > h4 {
-  font-size: 18px;
-  padding: 5px;
-  margin-top: 100px;
-}
-
-.stockist > p {
-  display: none;
-  width: 100%;
-  text-align: right;
-  font-size: 13px;
-  color: black;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 2px;
-}
-
-.stockist:hover > p {
-  display: block;
-}
-
-.stockist:nth-child(4n) {
-  background-color: gray;
-  margin-right: 0;
-}
-
-#blog {
-  width: 524px;
-  margin-right: 20px;
-  float: left;
-}
-
-#blog > .post > .video-player {
-  padding: 0 12px 0 12px;
-}
-
-#blog > .post > p > p > img {
-  width: 100%;
-}
-
-#blog > .post > img {
-  width: 100%;
-}
-
 .fancybox-outer > .fancybox-inner > img {
   overflow-y: hidden;
-}
-
-.post > p,
-.post > p > p {
-  color: rgba(0,0,0,0.5);
-  font-size: 13px;
-}
-
-.post > hr,
-.post-title {
-  margin: 0;
-}
-
-.post-title > a {
-  color: black;
-}
-
-.post-title > a:hover {
-  color: gray;
-  text-decoration: none;
-}
-
-.post-date {
-  font-size: 12px;
-  color: rgba(0,0,0, 0.3);
-  float: right;
-}
-
-#photo-feed {
-  width: 118px;
-  margin-right: 20px;
-  float: left;
-}
-
-#photo-feed > *,
-#photo-feed > a > img {
-  width: 100%;
-  margin-bottom: 4px;
-}
-
-#photo-feed > :last-child {
-  margin-bottom: 0;
-}
-
-.photo-column {
-  width: 205px;
-  float: left;
-}
-
-.photo-column.ui-scrollfix {
-  position: fixed;
-  margin-top: -138px;
-  margin-left: 682px;
-}
-
-.photo-column > * {
-  display: block;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-#instagram,
-#instagram-hover {
-  height: 206px;
-  width: 206px;
-  margin-top: 310px;
-}
-
-#featured,
-#featured-hover {
-  height: 310px;
-  width: 206px;
 }
 
 ul {
@@ -388,131 +123,4 @@ p, h1, h2, h3, h4, h5, a {
 #photo-feed > a:hover {
   opacity: 0.9;
   filter:Alpha(opacity=90);
-}
-
-/** RIPPED FROM BOOTSTRAP **/
-
-.carousel {
-  position: relative;
-  margin-bottom: 32px;
-  line-height: 1;
-}
-
-.carousel-inner {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-}
-
-.carousel-inner > .item {
-  position: relative;
-  display: none;
-  -webkit-transition: 0.6s ease-in-out left;
-     -moz-transition: 0.6s ease-in-out left;
-       -o-transition: 0.6s ease-in-out left;
-          transition: 0.6s ease-in-out left;
-}
-
-.carousel-inner > .item > img {
-  display: block;
-  line-height: 1;
-}
-
-.carousel-inner > .active,
-.carousel-inner > .next,
-.carousel-inner > .prev {
-  display: block;
-}
-
-.carousel-inner > .active {
-  left: 0;
-}
-
-.carousel-inner > .next,
-.carousel-inner > .prev {
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
-.carousel-inner > .next {
-  left: 100%;
-}
-
-.carousel-inner > .prev {
-  left: -100%;
-}
-
-.carousel-inner > .next.left,
-.carousel-inner > .prev.right {
-  left: 0;
-}
-
-.carousel-inner > .active.left {
-  left: -100%;
-}
-
-.carousel-inner > .active.right {
-  left: 100%;
-}
-
-.carousel-control {
-  position: absolute;
-  cursor: pointer;
-//  top: 40%;
-//  left: 15px;
-//  width: 40px;
-  height: 40px;
-  margin: 0;
-  font-size: 30px;
-  font-weight: 100;
-  line-height: 30px;
-//  color: #ffffff;
-//  text-align: center;
-//  background: #222222;
-//  border: 3px solid #ffffff;
-//  -webkit-border-radius: 23px;
-//     -moz-border-radius: 23px;
-//          border-radius: 23px;
-//  opacity: 0.5;
-//  filter: alpha(opacity=50);
-  opacity: 0.3;
-  filter: alpha(opacity=30);
-}
-
-.carousel-control.right {
-//  right: 15px;
-  right: 0px;
-  left: auto;
-}
-
-.carousel-control:hover {
-//  color: #ffffff;
-  text-decoration: none;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-}
-
-.carousel-caption {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 15px;
-  background: #333333;
-  background: rgba(0, 0, 0, 0.75);
-}
-
-.carousel-caption h4,
-.carousel-caption p {
-  line-height: 20px;
-  color: #ffffff;
-}
-
-.carousel-caption h4 {
-  margin: 0 0 5px;
-}
-
-.carousel-caption p {
-  margin-bottom: 0;
 }
