--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,4 +24,19 @@
     <img id="instagram-hover" src="images/media/insta.jpg">
     <img id="instagram" class="hover" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
   </a>
+  <div id="media-links" class="row-fluid">
+    <a href="http://vimeo.com/user16108071">
+      <img src="images/vimeo.png" alt="Caste on Vimeo">
+    </a>
+    <a href="http://www.youtube.com/user/CASTEQuality">
+      <img src="images/youtube.png" alt="Caste on Youtube">
+    </a>
+    <a href="https://twitter.com/castequality">
+      <img src="images/twitter.png" alt="Caste on Twitter">
+    </a>
+    <a href="https://www.facebook.com/pages/Caste-Quality/241637155973501?group_id=0">
+      <img src="images/facebook.png" alt="Caste on Facebook">
+    </a>
+  </div>
+  <img id="circle-logo" src="images/brain-circle.png" alt="Visual Stimulation Quality Products">
 </div>
